<resources>
    <string name="app_name">MyBudget</string>

    <string name="welcome_text">С нами ты на шаг ближе к финансовой стабильности!</string>
    <string name="sign_up_reason">Пройдите регистрацию, чтобы не потерять данные</string>
    <string name="close">Держите информацию о финансах рядом!</string>

    <string name="enter">Вход в приложение MyBudget</string>
    <string name="newAccount">Регистрация в приложении MyBudget</string>
    <string name="email">Почта</string>
    <string name="emailWrong">Вы ввели адрес электронной почты в неверном формате</string>
    <string name="passwordWrong">Пароль должен состоять минимум из 6 символов</string>
    <string name="password">Пароль</string>
    <string name="enter_email">Введите почту</string>
    <string name="enter_pass">Введите пароль</string>
    <string name="sign_up_complete">Зарегистрироваться</string>\
    <string name="sign_up">Регистрация</string>
    <string name="log_in">Войти</string>
    <string name="next">Далее</string>
    <string name="finish">Готово</string>
    <string name="log_in_google">Или войдите, используя</string>

    <string name="equal">=</string>
    <string name="every_months">Каждый месяц</string>
    <string name="loading">Подгружаем Ваши финансы...</string>

    <string name="page_finance_finances">Сбережения</string>
    <string name="page_finance_category">Категории расходов</string>
    <string name="page_finance_history">История</string>
    <string name="finances">Счета</string>
    <string name="plans">Планы</string>
    <string name="category">Категории</string>

    <string name="currentMonth">Текущий месяц</string>

    <!--ИСТОРИЯ-->
    <string name="history_category">Категория:\n%1$s</string>
    <string name="history_goals">Цель: %1$s</string>
    <string name="history_loans">Обязательная выплата: %1$s</string>
    <string name="history_budget">Пополнение счета</string>
    <string name="all_history">Общая</string>
    <string name="history_edit">Редактирование операции</string>
    <string name="history_renotify">Не забудьте установить уведомления на цель!</string>


    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Баланс: </string>
    <string name="nav_header_exit">Выход</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Финансы</string>
    <string name="menu_goals">Цели</string>
    <string name="menu_subs">Подписки</string>
    <string name="menu_loans">Важные выплаты</string>
    <string name="menu_analysis">Анализ</string>
    <string name="menu_setting">Настройки</string>

    <string name="card_expence_rem">осталось из</string>
    <string name="card_add_basic">Сделать основным</string>
    <string name="card_operation_wrong_value">Сумма должна быть положительной</string>
    <string name="card_operation">Операция</string>
    <string name="card_value">Введите сумму</string>
    <string name="add">Добавить</string>
    <string name="plan">Запланировать</string>
    <string name="trans">Перевести</string>

    <string name="card_goal_put">Начисление</string>
    <string name="card_income">Доход</string>
    <string name="card_goal_cons">Расход</string>

    <string name="card_new_exp_category">Категория расходов</string>
    <string name="card_new_exp_date">Дата</string>
    <string name="card_sub_paid">Оплачена</string>
    <string name="card_sub_cancel">Отменена</string>

    <string name="basic_currency">Выберите основную валюту для операций</string>
    <string name="basic_budget">Введите информацию об основном счете</string>
    <string name="basic_budget_name">Название</string>
    <string name="basic_budget_savings">Накопления</string>
    <string name="basic_budget_name_edit">Введите название</string>
    <string name="basic_budget_savings_edit">Введите сумму накоплений</string>

    <string name="basic_goals_edit">Введите сумму</string>
    <string name="basic_budget_type">Тип счета</string>
    <string name="budget">Счет</string>

    <string name="budget_transfer_from">Перевод со счета</string>
    <string name="budget_transfer_to">Перевод на счет</string>

    <string name="choose_priority">Выберите приоритет</string>
    <string name="dateExpence">Дата</string>

    <string name="choose_icon">Выберите иконку</string>
    <string name="basic_budget_type_spinner">Выберите тип счета..</string>

    <string name="enterCurrencyName">Введите название валюты</string>

    <!--ФИНАНСЫ-->
    <string name="chooseCategory">Выберите категорию расходов</string>
    <string name="fab">+</string>
    <string name="fab_transaction">Добавить новую операцию</string>
    <string name="fab_history">История и планы</string>
    <string name="fab_calculate">Распределить бюджет</string>
    <string name="fab_cancel_calculate">Отменить распределение</string>
    <string name="transaction_transfer">Перевод</string>
    <string name="inPlan">В планах потратить %1$s</string>

    <string name="base">%1$s (основной)</string>
    <string name="transaction">%1$d операций</string>
    <string name="remaind">%1$s %2$s</string>
    <string name="priority">Приоритет: %1$s</string>

    <string name="name">Название</string>

    <string name="too_of">перерасход из</string>

    <!--УВЕДОМЛЕНИЯ-->
    <string name="defaultTime">12:00</string>
    <string name="periodTitle">Периодичность напоминаний</string>
    <string name="timeTitle">Время</string>

    <!--ЦЕЛИ-->
    <string name="withouthDate">Без срока</string>
    <string name="withDate">Со сроком</string>
    <string name="titleGoals">Введите желаемую сумму</string>
    <string name="goalsName">Название цели</string>
    <string name="titleLoans">Выплата</string>
    <string name="target">/%1$s</string>
    <string name="reached">Достигнутые</string>
    <string name="expence_date">Просроченные</string>
    <string name="active">Активные</string>

    <!--ПОДПИСКИ-->
    <string name="billingPeriodTitle">Периодичность выплат</string>
    <string name="titleSubs">Введите стоимость подписки</string>
    <string name="nameSubs">Название подписки</string>
    <string name="dateSubs">Дата начала подписки</string>
    <string name="nameBudgetSubs">Счет: %1$s</string>
    <string name="reSubs">Восстановить</string>
    <string name="cancelledSubs">Отмененные</string>
    <string name="activeSubs">Активные</string>
    <!--ОБЯЗАТЕЛЬНЫЕ ПЛАТЕЖИ-->
    <string name="loanFinished"> Выплаченные</string>
    <string name="nameLoans">Название платежа</string>
    <string name="dateLoans">Период выплат</string>
    <string name="onceLoans">Одноразовый</string>
    <string name="regularLoans">Многоразовый</string>
    <string name="periodLoans">Выбирите даты...</string>
    <string name="dateLoanEnd">Срок: %1$s</string>
    <string name="dateLoanCurrent">Следущая: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>