<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/financeicon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/goalsicon"
            android:title="@string/menu_goals" />
        <item
            android:id="@+id/nav_loans"
            android:icon="@drawable/loansiconpng"
            android:title="@string/menu_loans" />

        <item
            android:id="@+id/nav_subs"
            android:icon="@drawable/subsicon"
            android:title="@string/menu_subs" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settingiconpng"
            android:title="@string/menu_setting" />
    </group>
</menu>