<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/very_light_green">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light"
        android:elevation="8dp"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameGLSTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            tools:text="Название" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <EditText
            android:id="@+id/glsValue"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/card_value"
            android:inputType="numberDecimal"
            android:padding="4dp"
            android:textSize="@dimen/subtitle" />

        <TextView
            android:id="@+id/currencyBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            tools:text="Р" />

    </LinearLayout>

    <TextView
        android:id="@+id/nameGLS"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/basic_budget_name"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/nameGLSEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/basic_budget_name_edit"
        android:inputType="text"
        android:padding="4dp"
        android:textSize="@dimen/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameGLS" />

    <TextView
        android:id="@+id/budget"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/budget"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameGLSEdit" />

    <Spinner
        android:id="@+id/spinnerBudget"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget" />

    <TextView
        android:id="@+id/iconChooseGLS"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_icon"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBudget" />

    <ImageView
        android:id="@+id/imageOfGLM"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:tint="@color/dark_green"
        android:src="@drawable/choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBudget" />

    <TextView
        android:id="@+id/glsDate"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/dateExpence"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconChooseGLS" />


    <CalendarView
        android:id="@+id/calendarViewGLS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glsDate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAddGLS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/light_green"
        android:enabled="false"
        android:focusable="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add"
        android:textSize="@dimen/subtitle"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarViewGLS" />

</androidx.constraintlayout.widget.ConstraintLayout>