<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFinance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scvHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linearLayoutHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@color/light"
            android:gravity="center"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroupHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:checked="true"
                    android:text="Общая"
                    android:textSize="@dimen/litText"
                    android:textColor="@color/dark_green"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbCategoryHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/category"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/litText"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbBudgetHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finances"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/dark_green"

                    android:textSize="@dimen/litText"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbPlansHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plans"
                    android:textColor="@color/dark_green"

                    android:textSize="@dimen/litText"
                    android:textStyle="bold" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinnerTypeOfHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

            <ImageView
                android:id="@+id/noTransactionImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:alpha="0.6"
                android:visibility="gone"
                android:src="@drawable/notransaction"/>
            <TextView
                android:id="@+id/noTransactionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_green"
                android:textStyle="bold"
                android:visibility="gone"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Вы еще не произвели ни одной транзакции"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/dateRangeHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.8"
        android:background="@drawable/listview_shadow"
        android:backgroundTint="@color/light_green"
        android:elevation="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="Текущий месяц"
        android:textStyle="italic"
        android:textColor="@color/light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
